# ns

./: .gitignore  README.md  configure.ac  file.c  file.h  file_item.h  main.c  ns.1  options.h  utility.c  utility.h
ns/: main.c
ns.xcodeproj/: project.pbxproj
ns.xcodeproj/project.xcworkspace/xcuserdata/jake.xcuserdatad/: UserInterfaceState.xcuserstate
ns.xcodeproj/project.xcworkspace/xcuserdata/jake.xcuserdatad/xcdebugger/: Expressions.xcexplist
ns.xcodeproj/xcuserdata/jake.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
ns.xcodeproj/xcuserdata/jake.xcuserdatad/xcschemes/: ns.xcscheme  xcschememanagement.plist
src/: file.c  file.h  file_item.c  file_item.h  main.c  makefile.am  ns.h  options.h  utility.c  utility.h
